Testing POM cleanup.